# wattwise

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  flake.nix  index.html  package-lock.json  package.json  snapcraft.yaml  tauri.conf.json
scripts/: release.sh  zenith-ctl.sh  zenith-energy.service
src/: App.css  App.jsx  battery.rs  config.rs  lib.rs  main.rs  monitor.rs  power.rs
src/components/layout/: Sidebar.jsx
src/vendors/: asus.rs  ideapad.rs  mod.rs
src/views/: Analytics.jsx  Battery.jsx  Core.jsx  Dashboard.jsx  Logs.jsx
